# rdfmapper

./: .gitignore  404.html  CITATION.cff  README.md  index.html  mkdocs.yml  objects.inv  paper.bib  paper.crossref  paper.md  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api/mapper/: index.html
api/repository/: index.html
background/: index.html
contributing/: index.html
docs/: background.md  contributing.md  getting-started.md  index.md
docs/api/: mapper.md  repository.md
docs/guide/: mapping.md  querying.md  relationships.md  shacl.md
examples/basic/: person_shacl.py
examples/relationships/: person_address.py
getting-started/: index.html
guide/mapping/: index.html
guide/querying/: index.html
guide/relationships/: index.html
guide/shacl/: index.html
search/: search_index.json
src/pyrdm/: __init__.py  mapper.py  repository.py
src/rdfmapper/: __init__.py  mapper.py  repository.py
tests/: test_pyrdm.py  test_rdfmapper.py
